ok call this good enough (thanks slawomir for reality check)

--- a/web/ex4.html
+++ b/web/ex4.html
@@ -10,9 +10,12 @@ idea:
      ./ . first just builtin types, e.g. with arithmetic
      ./ . then a short example (with structs and) passing pointers into functions
    - warm-up exercise about function pointers
-     . apply a function to each value in an array
-     . store a function pointer in a struct along with some value
-   - make a generic list_visit() which calls a function for each item->data
+     ./ . apply a function to each value in an array
+     xx . store a function pointer in a struct along with some value
+   - make a semi-generic list_visit() which calls a function for each item->data
+     . do this on the list of persons to print using various formats
+     . one without age
+     . one with the age before the name
    - have them adapt the linked list to it
      guided by a main() which maintains two lists, one of int and one of char*
      needs to separate list_dump() functions (for now)
