--- a/web/ex5.html
+++ b/web/ex5.html
@@ -77,7 +77,7 @@ The important thing to understand about recursion is:
 <h2>exercise 5.2: child-sibling trees</h2>
 
 <p>
-The partial implementation of child-sibling trees in <a href="itads2012/ex5/cstree.c">cstree.c</a> is ready to run, but it is missing the function implementations for computing printing the items in the tree, as well the function for computing the depth of each item.
+The partial implementation of child-sibling trees in <a href="itads2012/ex5/cstree.c">cstree.c</a> is ready to run, but it is missing the function implementations for printing the items in the tree, as well the function for computing the depth of each item.
 </p>
 
 <ol>
@@ -176,7 +176,153 @@ A
 
 <h2>exercise 5.3: binary search trees</h2>
 
+<p>
+Download <a href="itads2012/ex5/bstree.c">bstree.c</a>, a partial implementation of a binary search tree.
+This program needs to be given a list of insertions (and later also removals) on the command line.
+A good example insertion list is "<tt>4 2 6 1 3 5 7</tt>" which creates a fully balanced binary search tree with 7 items.
+</p>
 
+<ol>
+  <li>
+    Implement <tt>bstree_ins_rec</tt>, the recurse function which inserts new data into the binary search tree.
+    The code comments give more detailed instructions.
+    After implementing <tt>bstree_ins_rec</tt>, call your program as follows:
+    <pre class="command">
+./bstree 4 2 6 1 3 5 7</pre>
+    This should produce the following output:
+    <pre class="command">
+inserting 4
+*** Please implement bstree_in_order_rec
+
+inserting 2
+*** Please implement bstree_in_order_rec
+
+inserting 6
+*** Please implement bstree_in_order_rec
+
+inserting 1
+*** Please implement bstree_in_order_rec
+
+inserting 3
+*** Please implement bstree_in_order_rec
+
+inserting 5
+*** Please implement bstree_in_order_rec
+
+inserting 7
+*** Please implement bstree_in_order_rec
+
+Graphviz file written to diag.dot.
+  to view the diagram, enter the command:
+    dot -Tx11 diag.dot
+  to create a PDF diagram, enter the command:
+    dot -Tpdf -o diag.pdf diag.dot</pre>
+    Note that we are still missing <tt>bstree_in_order_rec</tt>, but as indicated by the program you can view the resulting tree by running the following command:
+    <pre class="command">
+dot -Tx11 diag.dot</pre>
+    Which should open a window that looks like this:
+    <img src="itads2012/ex5/diag-4-2-6-1-3-5-7.png" width="371" height="341"/>
+  </li>
+  <li>
+    Implement <tt>bstree_in_order_rec</tt>, the recursive function which implement in-order traversal of the tree.
+    With a correct implementation thereof, your program output (given the same command as before) should be:
+    <pre class="command">
+inserting 4
+  4
+inserting 2
+  2  4
+inserting 6
+  2  4  6
+inserting 1
+  1  2  4  6
+inserting 3
+  1  2  3  4  6
+inserting 5
+  1  2  3  4  5  6
+inserting 7
+  1  2  3  4  5  6  7
+Graphviz file written to diag.dot.
+  to view the diagram, enter the command:
+    dot -Tx11 diag.dot
+  to create a PDF diagram, enter the command:
+    dot -Tpdf -o diag.pdf diag.dot</pre>
+    Notice that the in-order traversal always gives a sorted list.
+    That's a fundamental property of binary search trees.
+  </li>
+  <li>
+    Run the program again with a different insertion list, namely "1 2 3 4 5 6 7":
+    <pre class="command">
+./bstree 1 2 3 4 5 6 7</pre>
+    And look again at the diagram produced when running the visualization software:
+    <pre class="command">
+dot -Tx11 diag.dot</pre>
+    What has happened?
+    Why?
+  </li>
+  <li>
+    <em>Optional (advanced)</em><br/>
+    Implement <tt>bstree_rem_rec</tt> and test it by appending a removal list when you run the <tt>bstree</tt> command.
+    In particular, the following tests check that you have covered all the possible cases.
+    Make sure that your code is right by comparing with the folowing commands and figures.
+    <ul>
+      <li>
+	removing a left leaf
+	<pre class="command">./bstree 4 2 6 1 3 5 7 r 1</pre>
+	<img src="itads2012/ex5/diag-4-2-6-1-3-5-7-r-1.png" width="275" height="341"/>
+      </li>
+      <li>
+	removing a right leaf
+	<pre class="command">./bstree 4 2 6 1 3 5 7 r 3</pre>
+	<img src="itads2012/ex5/diag-4-2-6-1-3-5-7-r-3.png" width="275" height="341"/>
+      </li>
+      <li>
+	parent reattachment trick on the left
+	<pre class="command">./bstree 4 2 6 1 3 5 7 r 1 2</pre>
+	<img src="itads2012/ex5/diag-4-2-6-1-3-5-7-r-1-2.png" width="281" height="341"/>
+      </li>
+      <li>
+	parent reattachment trick on the right
+	<pre class="command">./bstree 4 2 6 1 3 5 7 r 3 2</pre>
+	<img src="itads2012/ex5/diag-4-2-6-1-3-5-7-r-3-2.png" width="281" height="341"/>
+      </li>
+      <li>
+	full node with leaf on its right
+	<pre class="command">./bstree 4 2 6 1 3 5 7 r 2</pre>
+	<img src="itads2012/ex5/diag-4-2-6-1-3-5-7-r-2.png" width="275" height="341"/>
+      </li>
+      <li>
+	full node with full child on its right
+	<pre class="command">./bstree 4 2 6 1 3 5 7 r 4</pre>
+	<img src="itads2012/ex5/diag-4-2-6-1-3-5-7-r-4.png" width="275" height="341"/>
+      </li>
+      <li>
+	full node whose right child has no left child
+	<pre class="command">./bstree 4 2 6 1 3 5 7 r 5 4</pre>
+	<img src="itads2012/ex5/diag-4-2-6-1-3-5-7-r-5-4.png" width="281" height="341"/>
+      </li>
+    </ul>
+    You should also check that you have correctly freed all memory occupied by the items that were removed.
+    The easiest way to do this is to run each of the above commands in <a href="">Valgrind</a>, a powerful debugging and profiling suite which checks for memory leaks.
+    For example, run it on the first test case like this:
+    <pre class="command">valgrind ./bstree 4 2 6 1 3 5 7 r 1</pre>
+    The output of Valgrind should say something like this:
+    <pre class="command">
+==8852== HEAP SUMMARY:
+==8852==     in use at exit: 0 bytes in 0 blocks
+==8852==   total heap usage: 9 allocs, 9 frees, 440 bytes allocated
+==8852== 
+==8852== All heap blocks were freed -- no leaks are possible</pre>
+    If, on the other hand, you see something like this:
+    <pre class="command">
+==8906== HEAP SUMMARY:
+==8906==     in use at exit: 88 bytes in 8 blocks
+==8906==   total heap usage: 8 allocs, 0 frees, 88 bytes allocated
+==8906== 
+==8906== LEAK SUMMARY:
+==8906==    definitely lost: 12 bytes in 1 blocks</pre>
+    that means you forgot to free something somewhere.
+  </li>    
+</ol>
 
 </body>
 </html>
