move that nice heap implementation into pqueues, will do a simpler one-file for the exercise

--- a/web/ex6.html
+++ b/web/ex6.html
@@ -8,11 +8,16 @@
 
 <body>
 
-<h1>ITADS 2012 exercise 6<br/>make, priority queues, and heaps</h1>
+<h1>ITADS 2012 exercise 6<br/>heaps, make, and priority queues</h1>
 
 
 
-<h2>exercise 6.1: splitting your projects into multiple files</h2>
+<h2>exercise 6.1: integer max heap</h2>
+
+
+
+
+<h2>exercise 6.2: splitting your projects into multiple files</h2>
 
 <p>
 So far we have always placed all the code required for a given program into a single source file.
@@ -296,9 +301,7 @@ JJJJJJJJJJ hello from bar!</pre>
 
 
 
-<h2>exercise 6.2: priority queues based on vectors and trees</h2>
-
-<h2>exercise 6.3: efficient priority queues using heaps</h2>
+<h2>exercise 6.3: priority queues based on vectors and trees</h2>
 
 </body>
 </html>
