better table layout and style

--- a/website/schedule.html
+++ b/website/schedule.html
@@ -96,10 +96,10 @@
       <table>
 	<tbody>
 	  <tr>
-	    <td><strong>week</strong></td>
-	    <td><strong>time</strong></td>
-	    <td><strong>room</strong></td>
-	    <td><strong>content</strong></td>
+	    <th>week</th>
+	    <th>time</th>
+	    <th>room</th>
+	    <th>content</th>
 	  </tr>
 	  
 	  <tr>
@@ -119,18 +119,18 @@
 	    <td><a href="ex2.html">exercise 2</a> arrays, pointers, strings</td>
 	  </tr>
 	  
-	  <tr>
+	  <tr class="alt">
 	    <td rowspan="3">37</td>
 	    <td>tue sep 10  8h15-10h</td>
 	    <td>D415</td>
 	    <td><a href="to-do.pdf">lecture 2</a> vectors and lists</td>
 	  </tr>
-	  <tr>
+	  <tr class="alt">
 	    <td>tue sep 10 13h15-15h</td>
 	    <td>B231c</td>
 	    <td><a href="ex3.html">exercise 3</a> struct and vectors</td>
 	  </tr>
-	  <tr>
+	  <tr class="alt">
 	    <td>wed sep 11 13h15-15h</td>
 	    <td>B231c</td>
 	    <td><a href="ex4.html">exercise 4</a> lists, stacks, generics</td>
@@ -153,18 +153,18 @@
 	    <td><a href="ex6.html">exercise 6</a> heaps, priority queues</td>
 	  </tr>
 	  
-	  <tr>
+	  <tr class="alt">
 	    <td rowspan="3">39</td>
 	    <td>tue sep 24  8h15-10h</td>
 	    <td>D415</td>
 	    <td><a href="to-do.pdf">lecture 4</a> complexity analysis, sorting</td>
 	  </tr>
-	  <tr>
+	  <tr class="alt">
 	    <td>tue sep 17 10h15-12h</td>
 	    <td>B231c</td>
 	    <td><a href="ex7.html">exercise 7</a> computational complexity</td>
 	  </tr>
-	  <tr>
+	  <tr class="alt">
 	    <td>fri sep 27 13h15-15h</td>
 	    <td>B231c</td>
 	    <td><a href="pr1.html">project 1</a> sorting algorithm benchmarks</td>
@@ -187,18 +187,18 @@
 	    <td><em>continue with project 1</em></td>
 	  </tr>
 	  
-	  <tr>
+	  <tr class="alt">
 	    <td rowspan="3">41</td>
 	    <td>tue oct  8  8h15-10h</td>
 	    <td>D415</td>
 	    <td><a href="to-do.pdf">lecture 6</a> dynamic programming</td>
 	  </tr>
-	  <tr>
+	  <tr class="alt">
 	    <td>tue oct  8 13h15-15h</td>
 	    <td>B231c</td>
 	    <td><a href="ex8.html">exercise 8</a> dynamic programming</td>
 	  </tr>
-	  <tr>
+	  <tr class="alt">
 	    <td>fri oct 11 13h15-15h</td>
 	    <td>B231c</td>
 	    <td><a href="pr2.html">project 2</a> sequence alignment</td>
@@ -221,13 +221,13 @@
 	    <td><em>continue with project 2</em></td>
 	  </tr>
 
-	  <tr>
+	  <tr class="alt">
 	    <td rowspan="2">43</td>
 	    <td>tue oct 22  8h15-10h</td>
 	    <td><b>D215</b></td>
 	    <td><b>lecture 8</b> review and exam preparation</td>
 	  </tr>
-	  <tr>
+	  <tr class="alt">
 	    <td>&nbsp;</td>
 	    <td>&nbsp;</td>
 	    <td><em>no exercise or project in week 43</em></td>
