ported and updated welcome page

--- a/website/schedule.html
+++ b/website/schedule.html
@@ -15,9 +15,9 @@
 	  <li><a href="index.html">home</a>
 	    <ul>
 	      <li><a href="schedule.html">schedule</a></li>
-	      <li><a href="faq.html">frequently asked questions</a></li>
-	      <li><a href="linux-intro.html">introduction to linux</a></li>
-	      <li><a href="vbox.html">virtual appliance</a></li>
+	      <li><a href="faq.html">FAQ</a></li>
+	      <li><a href="linux-intro.html">linux intro</a></li>
+	      <li><a href="vbox.html">virtual box</a></li>
 	    </ul>
 	  </li>
 	  <li>exercises
