--- a/website/ex1.html
+++ b/website/ex1.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII">
-    <title>ITADS Linux Intro</title>
+    <title>ITADS Exercise 1</title>
     <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
@@ -80,7 +80,10 @@
 	  Type <tt>eclipse-cpp</tt> in the terminal and press enter, like this:
 	  <pre class="command">eclipse-cpp &</pre>
 	  Eclipse Juno will start up and ask you the workspace path.
-	  The default is <tt>home/stud1/username/workspace</tt> which is fine, so just click OK
+	  The default is <tt>home/stud1/username/workspace</tt> which is fine, so just click OK.
+	</dd>
+	<dd>
+	  <b>Note</b> that on the <a href="vbox.html">virtual appliance</a> you can launch Eclipse from the desktop icon in the upper left.
 	</dd>
       </dl>
       
@@ -158,7 +161,7 @@ int main(int argc, char ** argv)
 	  This is done by adding "<tt>-Wall</tt>" to the command.
 	  Compiler warnings are a very good way of catching potential bugs very early, before even running the program.
 	  To try this out, you have to edit the <tt>Makefile</tt> so that it contains the following version of the <tt>gcc</tt> specification:
-	  <pre class="code">gcc -Wall hello-world.c -o hello-world</pre>
+	  <pre class="code">gcc <b>-Wall</b> hello-world.c -o hello-world</pre>
 	  After you saved the new Makefile and rebuild the project, how does the compiler output change?
 	  What does the new message mean?
 	  Think about why it is a good idea to always pass <tt>-Wall</tt> to the compiler and edit the source code until all warnings are gone.
