getting ready to put this online with lots of things marked "under construction"

--- a/website/ex2.html
+++ b/website/ex2.html
@@ -200,7 +200,7 @@ argv[1] (length 1):     `"'</pre>
 	</li>
       </ol>
       
-      <h2>Exercise 2.4: strings are character arrays</h2>
+      <h2>Exercise 2.4 (optional): strings are character arrays</h2>
       
       <p>
 	Write a program called <tt>eascii</tt> that takes a string as command-line argument and prints a table with three lines:
