--- a/website/linux-intro.html
+++ b/website/linux-intro.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII">
-    <title>ITADS Linux Intro</title>
+    <title>ITADS Introduction to Linux</title>
     <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
