--- a/website/vbox.html
+++ b/website/vbox.html
@@ -12,7 +12,7 @@
       
       <div id="top-left">
 	<ul>
-	  <li><a href="index.html">home</a>
+	  <li><a href="index.html"><b>home</b></a>
 	    <ul>
 	      <li><a href="schedule.html">schedule</a></li>
 	      <li><a href="faq.html">FAQ</a></li>
@@ -20,7 +20,7 @@
 	      <li><a href="vbox.html">virtual box</a></li>
 	    </ul>
 	  </li>
-	  <li>exercises
+	  <li><b>exercises</b>
 	    <ul>
 	      <li><a href="ex1.html">exercise 1</a></li>
 	      <li><a href="ex2.html">exercise 2</a></li>
@@ -33,7 +33,7 @@
 	      <li><a href="ex9.html">exercise 9</a></li>
 	    </ul>
 	  </li>
-	  <li><a href="projects.html">projects</a>
+	  <li><b>projects</b>
 	    <ul>
 	      <li><a href="pr1.html">project 1</a></li>
 	      <li><a href="pr2.html">project 2</a></li>
