placed these two online, needed some W3C compliance and link target tweaks

--- a/website/index.html
+++ b/website/index.html
@@ -70,7 +70,7 @@
 	<dt>course code</dt>
 	<dd>DA4002</dd>
 	<dt>administrative links</dt>
-	<dd><a href="http://www.hh.se/sitevision/proxy/english/academics/coursesyllabi.3678.html/svid12_70cf2e49129168da015800070213/752680950/se_proxy/utb_kursplan.asp;jsessionid=650611370F9358EF38DB4D91A09A450E?kurskod=DA4002&revisionsnr=5&format=pdf&lang=EN">syllabus 2013 (PDF)</a></dd>
+	<dd><a href="http://www.hh.se/sitevision/proxy/english/academics/coursesyllabi.3678.html/svid12_70cf2e49129168da015800070213/752680950/se_proxy/utb_kursplan.asp;jsessionid=650611370F9358EF38DB4D91A09A450E?kurskod=DA4002&amp;revisionsnr=5&amp;format=pdf&amp;lang=EN">syllabus 2013 (PDF)</a></dd>
 	<dd><a href="schedule.html">schedule</a></dd>
 	<dd><a href="http://www.hh.se/english/ide/education/student/coursewebpages/algorithmsdatastructuresandproblemsolving.5001.html">course page</a> on the official University website</dd>
       </dl>
