--- a/website/schedule.html
+++ b/website/schedule.html
@@ -106,7 +106,7 @@
 	    <td rowspan="3">36</td>
 	    <td>tue sep  3  8h15-10h</td>
 	    <td>D415</td>
-	    <td><a href="to-do.pdf">lecture 1</a> course overview, C tutorial</td>
+	    <td><a href="documents/itads2013-l1-overview-and-C-tutorial.pdf">lecture 1</a> course overview, C tutorial</td>
 	  </tr>
 	  <tr>
 	    <td>tue sep  3 13h15-15h</td>
@@ -123,7 +123,7 @@
 	    <td rowspan="3">37</td>
 	    <td>tue sep 10  8h15-10h</td>
 	    <td>D415</td>
-	    <td><a href="to-do.pdf">lecture 2</a> vectors and lists</td>
+	    <td><b>lecture 2</b> vectors and lists</td>
 	  </tr>
 	  <tr class="alt">
 	    <td>tue sep 10 13h15-15h</td>
@@ -140,7 +140,7 @@
 	    <td rowspan="3">38</td>
 	    <td>tue sep 17  8h15-10h</td>
 	    <td>D415</td>
-	    <td><a href="to-do.pdf">lecture 3</a> searching, trees, heaps</td>
+	    <td><b>lecture 3</b> searching, trees, heaps</td>
 	  </tr>
 	  <tr>
 	    <td>tue sep 17 10h15-12h</td>
@@ -157,7 +157,7 @@
 	    <td rowspan="3">39</td>
 	    <td>tue sep 24  8h15-10h</td>
 	    <td>D415</td>
-	    <td><a href="to-do.pdf">lecture 4</a> complexity analysis, sorting</td>
+	    <td><b>lecture 4</b> complexity analysis, sorting</td>
 	  </tr>
 	  <tr class="alt">
 	    <td>tue sep 17 10h15-12h</td>
@@ -174,7 +174,7 @@
 	    <td rowspan="3">40</td>
 	    <td>tue oct  1  8h15-10h</td>
 	    <td>D415</td>
-	    <td><a href="to-do.pdf">lecture 5</a> divide &amp; conquer, memoization</td>
+	    <td><b>lecture 5</b> divide &amp; conquer, memoization</td>
 	  </tr>
 	  <tr>
 	    <td>tue oct  1 13h15-15h</td>
@@ -191,7 +191,7 @@
 	    <td rowspan="3">41</td>
 	    <td>tue oct  8  8h15-10h</td>
 	    <td>D415</td>
-	    <td><a href="to-do.pdf">lecture 6</a> dynamic programming</td>
+	    <td><b>lecture 6</b> dynamic programming</td>
 	  </tr>
 	  <tr class="alt">
 	    <td>tue oct  8 13h15-15h</td>
@@ -208,7 +208,7 @@
 	    <td rowspan="3">42</td>
 	    <td>tue oct 15  8h15-10h</td>
 	    <td>D415</td>
-	    <td><a href="to-do.pdf">lecture 7</a> graphs</td>
+	    <td><b>lecture 7</b> graphs</td>
 	  </tr>
 	  <tr>
 	    <td>tue oct 15 10h15-12h</td>
