--- a/website/ex1.html
+++ b/website/ex1.html
@@ -55,7 +55,7 @@
     <div id="content">
       
       <h1>
-	ITADS Exercise 1<br />
+	ITADS Exercise 1<br>
 	<em>types, variables, operators, control flow</em>
       </h1>
       
@@ -235,7 +235,7 @@ int main (int argc, char ** argv)
       <ol>
 	<li>
 	  Compile and run the <tt>type-conversion</tt> application.
-	  The result is probably not what you expected. Try to explain why before reading on...<br/><br/>
+	  The result is probably not what you expected. Try to explain why before reading on...<br><br>
 	  <b>Answer:</b> in an assignment the expression to the right is evaluated first, in this case a division.
 	  In the division both arguments are integers so <tt>/</tt> is interpreted as integer division, which truncates the remainder of the division.
 	  This is probably not what was intended!
