uploaded l2 pdf to webserver

--- a/website/schedule.html
+++ b/website/schedule.html
@@ -123,7 +123,7 @@
 	    <td rowspan="3">37</td>
 	    <td>tue sep 10  8h15-10h</td>
 	    <td>D415</td>
-	    <td><b>lecture 2</b> vectors and lists</td>
+	    <td><a href="documents/itads2013-l2-vectors-and-lists.pdf">lecture 2</a> vectors and lists</td>
 	  </tr>
 	  <tr class="alt">
 	    <td>tue sep 10 13h15-15h</td>
