forget about generics for now, we can do that in a later exercise

--- a/website/schedule.html
+++ b/website/schedule.html
@@ -133,7 +133,7 @@
 	  <tr class="alt">
 	    <td>wed sep 11 13h15-15h</td>
 	    <td>B231c</td>
-	    <td><a href="ex4.html">exercise 4</a> lists, stacks, generics</td>
+	    <td><a href="ex4.html">exercise 4</a> lists, stacks</td>
 	  </tr>
 	  
 	  <tr>
