--- a/website/schedule.html
+++ b/website/schedule.html
@@ -140,7 +140,7 @@
 	    <td rowspan="3">38</td>
 	    <td>tue sep 17  8h15-10h</td>
 	    <td>D415</td>
-	    <td><b>lecture 3</b> searching, trees, heaps</td>
+	    <td><a href="documents/itads2013-l3-searching-trees-heaps.pdf">lecture 3</a> searching, trees, heaps</td>
 	  </tr>
 	  <tr>
 	    <td>tue sep 17 10h15-12h</td>
