Finished group activities for lecture 5. Also decided to upload the group activities to the website.

--- a/website/index.html
+++ b/website/index.html
@@ -123,10 +123,12 @@
 	</li>
 	<li>
 	  <a href="documents/itads2013-l4-complexity-analysis-and-sorting.pdf">lecture 4</a> complexity analysis, sorting<br>
-	  <a href="documents/itads2013-l4b-function-call-mechanism.pdf">extra slides</a> on the function call mechanism
+	  <a href="documents/itads2013-l4b-function-call-mechanism.pdf">extra slides</a> on the function call mechanism<br>
+          <a href="documents/itads2013-l4-group-activities.pdf">group activities for lecture 4</a>
 	</li>
 	<li>
-	  <b>under construction lecture 5</b> divide &amp; conquer, memoization
+	  <a href="documents/itads2013-l5-divide-and-conquer.pdf">lecture 5</a> divide &amp; conquer, memoization<br>
+          <a href="documents/itads2013-l5-group-activities.pdf">group activities for lecture 5</a>
 	</li>
 	<li>
 	  <b>under construction lecture 6</b> dynamic programming
