--- a/website/schedule.html
+++ b/website/schedule.html
@@ -176,7 +176,8 @@
 	    <td>D415</td>
 	    <td>
 	      <a href="documents/itads2013-l4-complexity-analysis-and-sorting.pdf">lecture 4</a> complexity analysis, sorting<br>
-	      <a href="documents/itads2013-l4b-function-call-mechanism.pdf">extra slides</a> on the function call mechanism
+	      <a href="documents/itads2013-l4b-function-call-mechanism.pdf">extra slides</a> on the function call mechanism<br>
+              <a href="documents/itads2013-l4-group-activities.pdf">group activities for lecture 4</a>
 	    </td>
 	  </tr>
 	  <tr class="alt">
@@ -194,7 +195,10 @@
 	    <td rowspan="3">40</td>
 	    <td>tue oct  1  8h15-10h</td>
 	    <td>D415</td>
-	    <td><b>lecture 5</b> divide &amp; conquer, memoization</td>
+	    <td>
+	      <a href="documents/itads2013-l5-divide-and-conquer.pdf">lecture 5</a> divide &amp; conquer, memoization<br>
+              <a href="documents/itads2013-l5-group-activities.pdf">group activities for lecture 5</a>
+	    </td>
 	  </tr>
 	  <tr>
 	    <td>tue oct  1 13h15-15h</td>
